syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.pix";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";

package br.com.pix;

service KeyManagerService {
  rpc cadastroChavePix (RegistroChaveRequest) returns (RegistroChaveResponse) {}
}

service KeyManagerRemoveService {
  rpc removerChavePix(RemocaoChaveRequest) returns (RemocaoChaveResponse) {}
}

service KeyManagerConsultaService {
  rpc consultaChave(ConsultaChaveRequest) returns (ConsultaChaveResponse) {}
}

service KeyManagerListaService {

  rpc listaChaves(ListaChavesRequest) returns (ListaChavesResponse) {}
}

message RegistroChaveRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string chave = 3;

  TipoConta tipoConta = 4;
}

message RegistroChaveResponse {
  string idPix = 1;
  string chavePix = 2;
}

message RemocaoChaveRequest {
  string idPix = 1;
  string idCliente = 2;
}

message RemocaoChaveResponse {
  string idPix = 1;
  string idCliente = 2;
}

message ConsultaChaveRequest {
  message ConsultaPorPixEClienteId {
    string idPix = 1;
    string idCliente = 2;
  }

  oneof filtro {
    ConsultaPorPixEClienteId pixEClienteId = 1;
    string chavePix = 2;
  }
}

message ConsultaChaveResponse {

  message ChavePixInfo {

    message Conta {
      string instituicao = 1;
      string nomeTitular = 2;
      string cpfTitular = 3;
      TipoConta tipoConta = 4;
      string agencia = 5;
      string numero = 6;
    }

    TipoChave tipoChave = 1;
    string chavePix = 2;
    Conta conta = 3;
    google.protobuf.Timestamp criadoEm = 4;
  }

  string idPix = 1;
  string idClient = 2;
  ChavePixInfo chave = 3;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;
}

enum TipoChave {
  CHAVE_DESCONHECIDA = 0;
  CPF       = 1;
  CELULAR   = 2;
  EMAIL     = 3;
  ALEATORIA = 4;
}

message ListaChavesRequest {
  string idCliente = 1;
}

message ListaChavesResponse {

  string idCliente = 1;
  repeated ChaveResponse chavesPix = 2;

  message ChaveResponse {
    string idPix = 1;
    TipoChave tipoChave = 2;
    string chave = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp criadoEm = 5;
  }
}